<resources>
    <string name="app_name">SuitMediaTest</string>
    <string name="nama">Nama</string>
    <string name="is_palindrome">Is Palindrome</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="john_doe">John Doe</string>
    <string name="avatar_image">Avatar Image</string>
</resources>